--- a/modules/scss/index.scss
+++ b/modules/scss/index.scss
@@ -68,6 +68,12 @@
             right: 5px;
             top: 12px;
         }
+
+        .flavName {
+            background-repeat: no-repeat;
+            background-size: contain;
+            background-position: right;
+        }
     }
 
 }
