--- a/modules/scss/index.scss
+++ b/modules/scss/index.scss
@@ -74,6 +74,10 @@
             background-size: contain;
             background-position: right;
         }
+
+        .flavInfo, .flav {
+            display: none;
+        }
     }
 
 }
