--- a/modules/scss/index.scss
+++ b/modules/scss/index.scss
@@ -32,11 +32,15 @@
     input {
         padding:5px;
         font-size:15px;
+        // width: 50px;
         border: none;
         outline: none;
         border:1px solid #33CC33;
         background-color: #EEEEEE;
         border-radius: 5px;
+    }
+    input[type=number] {
+        width: 100px;
     }
     select, button {
         @extend input;
